--- a/package.json
+++ b/package.json
@@ -1,11 +1,22 @@
 {
-  "name": "whoop-cli",
+  "name": "whoo",
   "version": "0.1.0",
-  "private": true,
+  "description": "CLI to access your Whoop Health data through your terminal",
   "type": "module",
+  "bin": {
+    "whoo": "./src/index.ts"
+  },
+  "files": [
+    "src",
+    "README.md"
+  ],
   "scripts": {
     "start": "bun run src/index.ts",
-    "test": "bun test"
+    "build": "mkdir -p dist && bun build --compile src/index.ts --outfile dist/whoo",
+    "install:local": "mkdir -p ~/.local/bin && install -m 755 dist/whoo ~/.local/bin/whoo",
+    "prepublishOnly": "bun run test && bun run typecheck",
+    "test": "bun test",
+    "typecheck": "bunx tsc --noEmit"
   },
   "devDependencies": {
     "@types/bun": "^1.3.0",
